--- a/simplecloud-plugin/build.gradle
+++ b/simplecloud-plugin/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 
     api('net.kyori:adventure-text-minimessage:4.11.0')
     api('net.kyori:adventure-platform-bungeecord:4.1.2')
+    api 'com.github.steveice10:mcprotocollib:1.20-1'
 }
 
 shadowJar {
