support placeholder api

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,9 @@ allprojects {
             url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
         }
 
+        maven {
+            url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
+        }
     }
 
     project.ext {
