--- a/simplecloud-modules/simplecloud-module-permission/build.gradle
+++ b/simplecloud-modules/simplecloud-module-permission/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
     compileOnly 'com.velocitypowered:velocity-api:3.1.1'
     annotationProcessor 'com.velocitypowered:velocity-api:3.1.1'
+
+    compileOnly 'me.clip:placeholderapi:2.11.3'
 }
