--- a/simplecloud-plugin/build.gradle
+++ b/simplecloud-plugin/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 
     api('net.kyori:adventure-text-minimessage:4.11.0')
     api('net.kyori:adventure-platform-bungeecord:4.1.2')
+
+    compileOnly 'me.clip:placeholderapi:2.11.3'
 }
 
 shadowJar {
